tests/v3_validation/cattlevalidationtest/core/resources/k8s/daemonset.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: daemonset
spec:
  template:
    metadata:
      labels:
        app: daemonset-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
