tests/v3_validation/cattlevalidationtest/core/resources/k8s/dns-pod-hostname.yml
apiVersion: v1
kind: Service
metadata:
  name: bar
  labels:
    name: bar
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8000
    targetPort: 80
  selector:
    app: dns-pod-hostname

---

apiVersion: v1
kind: Pod
metadata:
  name: dns-pod-hostname
  labels:
    app: dns-pod-hostname
spec:
  hostname: foo
  subdomain: bar
  containers:
  - name: dns-pod-hostname
    image: sangeetha/testnewhostrouting:latest
    ports:
    - containerPort: 80
