tests/v3_validation/cattlevalidationtest/core/resources/k8s/edit_nginx.yml
apiVersion: v1
kind: ReplicationController
metadata:
  name: testeditnginx
spec:
  replicas: 2
  selector:
    name: testeditnginx
  template:
    metadata:
      labels:
        name: testeditnginx
    spec:
      containers:
        - name: testeditnginx
          image: nginx
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: testeditnginx
  labels:
    name: testeditnginx
    type: ui
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: testeditnginx
