tests/v3_validation/cattlevalidationtest/core/resources/k8s/hello-nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: husseingalal/hello-nginx
    ports:
    - containerPort: 80
