tests/v3_validation/cattlevalidationtest/core/resources/k8s/ingress_20.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress20
  annotations:
    http.port: "104"
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: k8test20-one
          servicePort: 81
      - path: /name.html
        backend:
          serviceName: k8test20-three
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: k8test20-two
          servicePort: 81
      - path: /name.html
        backend:
          serviceName: k8test20-three
          servicePort: 80
