tests/v3_validation/cattlevalidationtest/core/resources/k8s/ingress_5.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress5
 annotations:
   http.port: "88"
spec:
  backend:
    serviceName: k8test5
    servicePort: 80
