tests/v3_validation/cattlevalidationtest/core/resources/k8s/ingress_6.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress6
 annotations:
   http.port: "81"
spec:
  backend:
    serviceName: k8test6
    servicePort: 80
