tests/v3_validation/cattlevalidationtest/core/resources/k8s/m_haproxycert_testclient_dc.yml
version: '2'
volumes:
  mytestcerts-test-504715:
    external: true
    driver: rancher-nfs
services:
  testclient:
    scale: 1
    image: sangeetha/testclient
    volumes:
    - mytestcerts:/certs
    ports:
    - 7890:22/tcp
