tests/v3_validation/cattlevalidationtest/core/resources/k8s/pod-nginx-hostnet.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  hostNetwork: true
  containers:
  - name: nginx
    image: husseingalal/podspec-hostnet
    ports:
    - containerPort: 8000
