tests/v3_validation/cattlevalidationtest/core/resources/k8s/pod-nginx-nodeSelector.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  nodeSelector: 
    role: testnode
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
