tests/v3_validation/cattlevalidationtest/core/resources/k8s/pod-nginx-tgp.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  terminationGracePeriodSeconds: 100
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
