tests/v3_validation/cattlevalidationtest/core/resources/k8s/service-nginx-lb.yml
apiVersion: v1
kind: ReplicationController
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
        - name: nginx
          image: husseingalal/nginx-curl
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: lbnginx
  labels:
    name: lbnginx
spec:
  type: LoadBalancer
  ports:
  - port: 8888
    targetPort: 80
  selector:
    name: nginx
