tests/v3_validation/cattlevalidationtest/core/resources/k8s/service1_ingress.yml
apiVersion: v1
kind: Service
metadata:
 name: k8test1
 labels:
   k8s-app: k8test1-service
spec:
 ports:
 - port: 81
   targetPort: 81
   protocol: TCP
   name: http
 selector:
   k8s-app: k8test1-service
---
apiVersion: v1
kind: ReplicationController
metadata:
 name: k8testrc1
spec:
 replicas: 2
 selector:
   k8s-app: k8test1-service
 template:
   metadata:
     labels:
       k8s-app: k8test1-service
   spec:
     terminationGracePeriodSeconds: 60
     containers:
     - name: testcontainer
       image: sangeetha/testnewhostrouting
       ports:
       - containerPort: 81
