tests/v3_validation/cattlevalidationtest/core/resources/k8s/service2_new_ingress.yml
apiVersion: v1
kind: Service
metadata:
 name: k8test2-new
 labels:
   k8s-app: k8test2-new-service
spec:
 ports:
 - port: 80
   targetPort: 80
   protocol: TCP
   name: http
 selector:
   k8s-app: k8test2-new-service
---
apiVersion: v1
kind: ReplicationController
metadata:
 name: k8testrc2-new
spec:
 replicas: 2
 selector:
   k8s-app: k8test2-new-service
 template:
   metadata:
     labels:
       k8s-app: k8test2-new-service
   spec:
     terminationGracePeriodSeconds: 60
     containers:
     - name: testcontainer
       image: sangeetha/testnewhostrouting
       ports:
       - containerPort: 80
