tests/v3_validation/cattlevalidationtest/core/resources/k8s/service5_ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: k8test5
  labels:
    k8s-app: k8test5-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    k8s-app: k8test5-service
---
apiVersion: v1
kind: ReplicationController
metadata:
  name: k8testrc5
spec:
  replicas: 2
  selector:
    k8s-app: k8test5-service
  template:
    metadata:
      labels:
        k8s-app: k8test5-service
    spec:
      containers:
      - name: testcontainer
        image: sangeetha/testnewhostrouting
        ports:
        - containerPort: 80
        tty: true
